--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.0",
     "@types/react-datepicker": "^6.0.1",
     "@types/uuid": "^9.0.8",
     "@types/yup": "^0.32.0",
