--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
     "@types/react-datepicker": "^6.0.1",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@types/uuid": "^9.0.8",
     "@types/yup": "^0.32.0",
     "axios": "^1.6.7",
@@ -25,6 +26,7 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
     "semantic-ui-css": "^2.5.0",
